changed clearConsole() to take original command for Windows